--- a/todo-frontend/index.html
+++ b/todo-frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/write.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Notes Application - Create your notes | Save Them | Download Them as PDF | Your Notes your control</title>
   </head>
   <body>
     <div id="root"></div>
